src/styles/globals.css
/* ... */
.mantine-Accordion-item[data-active="true"] {
  background-color: #ffffff !important;
}

.animated-svg {
  max-width: 180px;
  height: auto;
  margin: 0 auto;

  &.behind-title {
    position: absolute;
    top: -100px;
    left: 0;
    right: 0;
    z-index: -1;
    height: 90px;
    width: 180px;
    opacity: .5;
  }

  &.behind-left {
    left: -100%;
  }

  &.behind-right {
    left: 50%;
  }
}

.spotify-iframe {
  border-radius: 12px;
}

.spotify-iframe h1 {
  text-align: center !important
}

.spotify-iframe h1 div>span:last-child,
.spotify-iframe h1 div>span:last-child:nth-last-child(2) {
  display: none !important;
}

.btn-sound {
  height: 42px;
  width: 42px;

  &.active {
    animation: pulse 3s infinite;
  }

  .sound-active {
    animation: sound-active 3s ease-in-out infinite alternate;
  }
}


.mapboxgl-popup-content {
  padding: 10px !important;
  border-radius: 1rem !important;

  & figure img {
    border-radius: calc(1rem - 10px);
  }

  & figure figcaption {
    font-family: var(--font-lora) !important;
    text-align: center;
  }
}

.mapboxgl-popup-close-button {
  font-family: var(--font-lora) !important;
  font-size: 24px;
  padding: 10px 14px;
  background-color: #fff !important;
  border-bottom-left-radius: 1rem !important;
  border-top-right-radius: 1rem !important;
  /*top: 10px !important;
  right: 10px !important;*/
}

.wiggle {
  /*animation: wiggle 0.5s;*/
  animation: wiggle-infinite 5s infinite;
}

@keyframes wiggle {

  0%,
  100% {
    transform: translateX(0);
  }

  25% {
    transform: translateX(-5px);
  }

  50% {
    transform: translateX(5px);
  }

  75% {
    transform: translateX(-5px);
  }
}

@keyframes wiggle-infinite {

  0%,
  100% {
    transform: translateX(0);
  }

  4% {
    transform: translateX(-5px);
  }

  8% {
    transform: translateX(5px);
  }

  12% {
    transform: translateX(-5px);
  }

  16% {
    transform: translateX(0);
  }
}

@keyframes sound-active {
  from {
    transform: rotate(-15deg);
  }

  to {
    transform: rotate(15deg);
  }
}

@keyframes pulse {
  0% {
    box-shadow: 0 0 0 0 #E8BCCD;
  }

  to {
    box-shadow: 0 0 0 15px #E8BCCD01;
  }
}

@keyframes pulseOpacity {
  0% {
    opacity: .2;
    transform: scale(95%);
  }

  to {
    opacity: .4;
    transform: scale(100%);
  }
}

@keyframes rotate360 {
  0% {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

